# workflow-container-runtime

./: .dockerignore  .gitignore  AGENTS.md  DESIGN.md  README.md  pyproject.toml
doc/design/: workflow-container-runtime.md
docker/platform-base/: Dockerfile
test/: test_artifact_materializer.py  test_codex_runner.py  test_dbos_workflow_integration.py  test_execution_context.py  test_json_artifact.py  test_mcp_playwright_profile.py  test_package.py  test_platform.py  test_platform_base_image.py  test_prompt_renderer.py  test_recovery_matrix.py  test_request.py  test_sqlite_state.py  test_step_lifecycle.py  test_verified_stage_runner.py  test_workflow_lifecycle.py
workflow_container_runtime/: __init__.py  capability.py  data.py  instance.py  mcp_playwright_profile.py  model.py  platform.py  request.py  retry.py  verification.py
workflow_container_runtime/artifact/: __init__.py  materializer.py  writer.py
workflow_container_runtime/codex/: __init__.py  config.py  runner.py  schema.py
workflow_container_runtime/prompt/: __init__.py  renderer.py
workflow_container_runtime/prompt/template/partial/: artifact_reference_contract.md.j2  browser_browsing_error_result_contract.md.j2  browser_browsing_error_verification_contract.md.j2  json_artifact_reading_contract.md.j2  local_artifact_reading_contract.md.j2  runtime_source_access.md.j2  stage_action_contract.md.j2  stage_retry_context.md.j2  stage_verification_contract.md.j2  step_instruction_context.md.j2  step_retry_context.md.j2  step_verification_contract.md.j2
workflow_container_runtime/prompt/template/system/: codex_browser_stage.md.j2  codex_browser_step.md.j2  codex_stage.md.j2  codex_step.md.j2
workflow_container_runtime/stage/: __init__.py  browser.py  file.py  runner.py  step.py
workflow_container_runtime/state/: __init__.py  sqlite.py
workflow_container_runtime/step/: __init__.py  base.py  browser.py  codex.py  context.py  file.py
workflow_container_runtime/workflow/: __init__.py  base.py  config.py  context.py
