[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow-container-runtime"
version = "0.1.0"
description = "Reusable runtime mechanics for workflow-container projects"
requires-python = ">=3.14"
dependencies = [
  "Jinja2>=3.1.0",
  "pydantic>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.black]
target-version = ["py314"]
line-length = 120

[tool.setuptools.packages.find]
include = ["workflow_container_runtime*"]
where = ["."]

[tool.setuptools.package-data]
workflow_container_runtime = ["prompt/template/**/*.j2"]
